# slint_duckdb_viewer

./: Cargo.toml  README.md
src/: loader.rs  main.rs  model.rs  utils.rs
test_data/: AAPL_minute.csv  AAPL_minute.parquet  ZZ.n.0.parquet  duration.parquet  naive_time.parquet  other_data_types.csv  other_data_types.parquet  time.parquet
ui/: about.slint  app-window.slint  global.slint  home_page.slint  pagination.slint  settings.slint
